[3 - 4단계 방탈출 예약 대기] 엘라(오숙현) 미션 제출합니다. (#126)
* refactor: 예약 정보 조회 fetch join 적용

* refactor: 데이터베이스 생성, 삭제 로직 Transactional 적용

* docs: 3단계 기능 요구 사항 정의

* refactor: 클라이언트 코드 수정

* feat: 예약 대기 요청 기능 구현

* feat: 예약 대기 목록 조회 기능 구현

* feat: 예약 대기 취소 기능 구현

* docs: 3단계 기능 API 명세 추가

* test: 예약 대기 기능 관련 테스트 추가

* docs: 4단계 기능 요구 사항 정의

* feat: 관리자 예약 대기 관리 페이지 추가

* feat: 전체 예약 대기 목록 조회 기능 구현

* feat: 관리자 예약 대기 취소 기능 구현

* feat: 에약 대기 자동 승인 기능 구현

* refactor: 예약 취소 후 페이지 재조회 기능 추가

* refactor: 예약 대기 응답 형태 수정

* test: waitingService 테스트 추가

* refactor: 예약 대기 엔드포인트 수정

* refactor: 예외 처리 추가

* refactor: waiting, reservation 생성자 접근제어자 수정

* refactor: 우선순위 높은 대기 내역 조회 쿼리 수정

* chore: favicon 파일 추가

* test: 예약 대기 검증 관련 테스트 추가

* refactor: 예약 대기 날짜, 시간 검증 위치 변경

* refactor: optional 검증 방식 ifPresent 적용

* style: 불필요한 import문 삭제

* refactor: 예약 대기 메세지 출력 위치 변경

* refactor: 예약 대기 예약 전환 오류 수정

* refactor: 관리자 예약 대기 거절시 상태 변경 방식 적용

* refactor: 관리자 예약 대기 거절 API 수정

* refactor: 예약 대기 상태 변경 메서드 수정

* refactor: 예약 대기 거절 메서드 이름 수정